2001-03-27  Marius Vollmer  <mvo@zagadka.ping.de>

	* values.h (scm_values_vtable, SCM_VALUESP): Moved here so that
	eval.c can use it.
	(scm_call_with_values): Removed.
	* values.c (values_vtable, scm_values_vtable): Added "scm_" prefix
	so that it can be exported.
	(scm_call_with_values): Removed.
	
	* tags.h (SCM_IM_CALL_WITH_VALUES): New isym.
	* eval.c: Include "libguile/values.h"
	(scm_m_at_call_with_values, scm_sym_at_call_with_values):
	New.
	(unmemocopy, scm_ceval, scm_deval): Handle new isym.
	* eval.h (scm_sym_at_call_with_values, scm_m_at_call_with_values):
	New delcarations to support above change.

	* eval.c (scm_primitive_eval_x, scm_primitive_eval): Fix syntax
	errors with last change.
	
2001-03-25  Marius Vollmer  <mvo@zagadka.ping.de>

	* eval.c (scm_primitive_eval_x, scm_primitive_eval, scm_i_eval_x,
	scm_i_eval): Moved the application of the system transformer from
	scm_i_eval to scm_primitive_eval.

2001-03-23  Neil Jerram  <neil@ossau.uklinux.net>

	* guile-snarf.awk.in: Substitute "\\" with "\" in .doc output.

	* strop.c (scm_string_index): Fix docstring line break
	regression.

	* list.c (scm_cons_star): Fix docstring typo.

2001-03-22  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* gc.c (scm_init_storage), gdbint.c (scm_init_gdbint), numbers.c
	(big2str), ports.c (scm_drain_input), read.c (scm_read,
	scm_grow_tok_buf), strings.c (scm_string, scm_makfromstr,
	scm_make_string, scm_string_append), strports.c (st_resize_port,
	scm_object_to_string), unif.c (scm_make_uve):  Replace calls to
	scm_makstr with calls to scm_allocate_string.

	* strings.[ch] (scm_allocate_string):  New function.

	* strings.[ch] (scm_makstr):  Deprecated.

2001-03-18  Gary Houston  <ghouston@arglist.com>

	* posix.c (scm_tmpnam): check that return value from tmpnam is not
	NULL.  rewrote the docstring.
	(scm_mkstemp): new procedure implementing "mkstemp!".
	* posix.h: declare scm_mkstemp.

	* net_db.c: declare h_errno if configure didn't define HAVE_H_ERRNO.